<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.AuthenticationActivity">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/welcome_to_the_location_reminder_app"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>